# dezoort_interaction_network

./: pyproject.toml
src/interaction_network_paper/: run_interaction_network.py
src/interaction_network_paper/gnn_inference/: measure_inference_acc.py
src/interaction_network_paper/graph_construction/: build_data-driven.py  build_geometric.py  build_pre-clustering.py
src/interaction_network_paper/track_building/: measure_tracking_effs.py
