[tool.poetry]
name = "interaction-network-paper"
version = "0.1"
description = "Charged Particle Tracking via Edge-Classifying Interacting Networks"
authors = []
readme = "README.md"
packages = [{include = "interaction_network_paper", from="src"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22"
trackml = {git = "https://github.com/LAL/trackml-library.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
